Fix menu layout bug

--- a/Pensive.Front/src/components/Menu/Menu.css
+++ b/Pensive.Front/src/components/Menu/Menu.css
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: column;
 
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 
   background-color: #0a0a0a;
   border-right: 1px solid #363636;
@@ -16,6 +17,7 @@
 
 .menu__content {
   padding: 5px 5px 0px 5px;
+  overflow-x: hidden;
 }
 
 .menu__item {
